2005-09-12  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.9.1 (Not Of This Earth)

2005-09-11  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos oldgen r13c3 and newgen
	1.0-02.

	* arch/ppc/patches: Upgrade to Adeos oldgen r8c4.

	* skins/rtai/syscall.c (__rt_queue_bind, __rt_heap_bind): Check
	whether we actually run in primary mode before attempting to relax
	the caller.
	__rt_heap_alloc: Make conforming.

	* skins/rtai/heap.c (__heap_read_proc): Swap used and total size
	values.

	* include/nucleus/asm-i386/hal.h (rthal_timer_program_shot): Kick
	the timer IRQ immediately upon null delay using the HAL's internal
	interrupt trigger service.

2005-09-09  Philippe Gerum  <rpm@xenomai.org>

	* skins/posix/demos/accuracy.c (threadB): Fix sem_wait() arg.

	* fusion: Makefile.kbuild -> Kbuild; remove top and bottom Kbuild
	commands.

	* fusion/makefile: Rename srctree to fusion_srctree to prevent
	conflicts with Kbuild.

2005-09-06  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.9 (Ice Nice)

2005-09-06  Heikki Lindholm <holindho@cs.helsinki.fi>
	
	* skins/posix/lib/wrappers.c: Solve shared lib issues with the
	--wrap directive.
	
2005-09-06  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Add initial release of the next generation
	Adeos support.

	* drivers/16550A/16550A.c: Include missing asm/io.h.

	* skins/posix/lib/GNUmakefile.am (libpthread_rt_la_LDFLAGS):
	Remove spurious wrapping flags.

	* skins/posix/demos/accuracy.c (threadA, threadB): Make sem_wait()
	check for errors.

	* nucleus/shadow.c (gatekeeper_thread): Clear the root thread's
	priority boost after the current gatekeeping request has been
	processed.

2005-09-05  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-generic/system.h (xnarch_escalate): Get rid
	of splsync there; this is useless and used to induce high jittery
	in SMP configs, due to interrupt storm hitting the gatekeeper in
	the middle of a thread hardening sequence.
